--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "debug": "^2.1.0",
     "forge": "^2.2.0",
+    "getmac": "^1.0.7",
     "httplike": "1.0.1",
     "ip": "0.3.2",
     "mdns": "2.2.2",
