--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "portastic": "0.0.1",
     "priorityqueuejs": "0.2.0",
     "random-mac": "0.0.4",
-    "randomstring": "1.0.3"
+    "randomstring": "1.0.3",
+    "tcp-spy": "^1.0.0"
   },
   "devDependencies": {
     "speaker": "0.2.5",
